refactor: Prefer the Java standard library instead of Guava
Use this link to re-run the recipe: https://public.moderne.io/recipes/org.openrewrite.java.migrate.guava.NoGuava

Co-authored-by: Moderne <team@moderne.io>