@@ -20,13 +20,14 @@ import static java.util.Arrays.asList;
 import com.github.jknack.handlebars.Options;
 import com.google.common.collect.ImmutableList;
 import java.io.IOException;
+import java.util.List;
 
 public class ArrayHelper extends HandlebarsHelper<Object> {
 
   @Override
   public Object apply(Object context, Options options) throws IOException {
     if (context == null || context == options.context.model()) {
-      return ImmutableList.of();
+      return List.of();
     }
 
     return ImmutableList.builder().add(context).addAll(asList(options.params)).build();
