@@ -26,6 +26,7 @@ import java.text.DateFormat;
 import java.time.Instant;
 import java.time.format.DateTimeFormatter;
 import java.util.Date;
+import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -42,7 +43,7 @@ public class ParseDateHelperTest {
 
   @Test
   public void parsesAnISO8601DateWhenNoFormatSpecified() throws Exception {
-    ImmutableMap<String, Object> optionsHash = ImmutableMap.of();
+    ImmutableMap<String, Object> optionsHash = Map.of();
 
     String inputDate = "2018-05-01T01:02:03Z";
     Object output = render(inputDate, optionsHash);
@@ -54,7 +55,7 @@ public class ParseDateHelperTest {
 
   @Test
   public void parsesAnRFC1123DateWhenNoFormatSpecified() throws Exception {
-    ImmutableMap<String, Object> optionsHash = ImmutableMap.of();
+    ImmutableMap<String, Object> optionsHash = Map.of();
 
     String inputDate = "Tue, 01 Jun 2021 15:16:17 GMT";
     Object output = render(inputDate, optionsHash);
@@ -68,7 +69,7 @@ public class ParseDateHelperTest {
   @Test
   public void parsesDateWithSuppliedFormat() throws Exception {
     ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.<String, Object>of("format", "dd/MM/yyyy");
+        Map.of("format", "dd/MM/yyyy");
 
     String inputDate = "01/02/2003";
     Object output = render(inputDate, optionsHash);
@@ -81,7 +82,7 @@ public class ParseDateHelperTest {
   @Test
   public void parsesLocalDateTimeWithSuppliedFormat() throws Exception {
     ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.<String, Object>of("format", "dd/MM/yyyy HH:mm:ss");
+        Map.of("format", "dd/MM/yyyy HH:mm:ss");
 
     String inputDate = "01/02/2003 05:06:07";
     Object output = render(inputDate, optionsHash);
@@ -93,7 +94,7 @@ public class ParseDateHelperTest {
 
   @Test
   public void parsesDateTimeWithEpochFormat() throws Exception {
-    ImmutableMap<String, Object> optionsHash = ImmutableMap.<String, Object>of("format", "epoch");
+    ImmutableMap<String, Object> optionsHash = Map.of("format", "epoch");
 
     String inputDate = "1577964091000";
     Object output = render(inputDate, optionsHash);
