@@ -22,8 +22,9 @@ import com.github.tomakehurst.wiremock.common.ConsoleNotifier;
 import com.github.tomakehurst.wiremock.common.LocalNotifier;
 import com.github.tomakehurst.wiremock.extension.responsetemplating.SystemKeyAuthoriser;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import java.io.IOException;
+import java.util.Map;
+import java.util.Set;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -33,16 +34,14 @@ public class SystemValueHelperTest {
 
   @BeforeEach
   public void init() {
-    helper = new SystemValueHelper(new SystemKeyAuthoriser(ImmutableSet.of(".*")));
+    helper = new SystemValueHelper(new SystemKeyAuthoriser(Set.of(".*")));
     LocalNotifier.set(new ConsoleNotifier(true));
   }
 
   @Test
   public void getExistingEnvironmentVariableShouldNotNull() throws Exception {
     ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.<String, Object>of(
-            "key", "PATH",
-            "type", "ENVIRONMENT");
+        Map.of("key", "PATH", "type", "ENVIRONMENT");
 
     String output = render(optionsHash);
     assertNotNull(output);
@@ -52,9 +51,7 @@ public class SystemValueHelperTest {
   @Test
   public void getNonExistingEnvironmentVariableShouldNull() throws Exception {
     ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.<String, Object>of(
-            "key", "NON_EXISTING_VAR",
-            "type", "ENVIRONMENT");
+        Map.of("key", "NON_EXISTING_VAR", "type", "ENVIRONMENT");
 
     String output = render(optionsHash);
     assertNull(output);
@@ -62,12 +59,10 @@ public class SystemValueHelperTest {
 
   @Test
   public void getForbiddenEnvironmentVariableShouldReturnError() throws Exception {
-    helper = new SystemValueHelper(new SystemKeyAuthoriser(ImmutableSet.of("JAVA*")));
+    helper = new SystemValueHelper(new SystemKeyAuthoriser(Set.of("JAVA*")));
 
     ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.<String, Object>of(
-            "key", "TEST_VAR",
-            "type", "ENVIRONMENT");
+        Map.of("key", "TEST_VAR", "type", "ENVIRONMENT");
     String value = render(optionsHash);
     assertEquals("[ERROR: Access to TEST_VAR is denied]", value);
   }
@@ -75,34 +70,28 @@ public class SystemValueHelperTest {
   @Test
   public void getEmptyKeyShouldReturnError() throws Exception {
     ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.<String, Object>of(
-            "key", "",
-            "type", "PROPERTY");
+        Map.of("key", "", "type", "PROPERTY");
     String value = render(optionsHash);
     assertEquals("[ERROR: The key cannot be empty]", value);
   }
 
   @Test
   public void getAllowedPropertyShouldSuccess() throws Exception {
-    helper = new SystemValueHelper(new SystemKeyAuthoriser(ImmutableSet.of("test.*")));
+    helper = new SystemValueHelper(new SystemKeyAuthoriser(Set.of("test.*")));
     System.setProperty("test.key", "aaa");
     assertEquals("aaa", System.getProperty("test.key"));
     ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.<String, Object>of(
-            "key", "test.key",
-            "type", "PROPERTY");
+        Map.of("key", "test.key", "type", "PROPERTY");
     String value = render(optionsHash);
     assertEquals("aaa", value);
   }
 
   @Test
   public void getForbiddenPropertyShouldReturnError() throws Exception {
-    helper = new SystemValueHelper(new SystemKeyAuthoriser(ImmutableSet.of("JAVA.*")));
+    helper = new SystemValueHelper(new SystemKeyAuthoriser(Set.of("JAVA.*")));
     System.setProperty("test.key", "aaa");
     ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.<String, Object>of(
-            "key", "test.key",
-            "type", "PROPERTY");
+        Map.of("key", "test.key", "type", "PROPERTY");
     String value = render(optionsHash);
     assertEquals("[ERROR: Access to test.key is denied]", value);
   }
@@ -110,9 +99,7 @@ public class SystemValueHelperTest {
   @Test
   public void getNonExistingSystemPropertyShouldNull() throws Exception {
     ImmutableMap<String, Object> optionsHash =
-        ImmutableMap.<String, Object>of(
-            "key", "not.existing.prop",
-            "type", "PROPERTY");
+        Map.of("key", "not.existing.prop", "type", "PROPERTY");
     String output = render(optionsHash);
     assertNull(output);
   }
